added slide about motivation

--- a/coscPresentation.tex
+++ b/coscPresentation.tex
@@ -116,6 +116,18 @@
 
 \subsection{Subsection Example} % A subsection can be created just before a set of slides with a common theme to further break down your presentation into chunks
 
+
+
+
+\begin{frame}
+\frametitle{Motivation}
+\item Ford fulkerson has a large running time for finding the minimum cut for large integer flows. It runs in pseudo polynomial time.  This is a big drawback.
+\item There exists a randomnized algorithm that could solve the minimum cut problem that is not affected by large integer flows.
+
+
+\end{frame}
+
+
 \begin{frame}
 \frametitle{Randomnized Algorithms }
 \begin{block}{Waiting for first Success}<1->
