--- a/coscPresentation.tex
+++ b/coscPresentation.tex
@@ -206,7 +206,7 @@ However, we have showed even if it can only succeed with small probability, we c
 
 
 \subsection{Error Probability}
-
+\begin{frame}
 \frametitle{Analysis of Contract Algorithm}
 \begin{overlayarea}{\linewidth}{\textheight}
 \begin{onlyenv}<1-2,4>
@@ -382,6 +382,7 @@ This statement requires citation \cite{p1}.
 \frametitle{References}
 \footnotesize{
 \begin{thebibliography}{99} % Beamer does not support BibTeX so references must be inserted manually as below
+\bibitem[Karger Diagram]{p1} 
 \bibitem[Smith, 2012]{p1} John Smith (2012)
 \newblock Title of the publication
 \newblock \emph{Journal Name} 12(3), 45 -- 678.
