preparing to add images

--- a/coscPresentation.tex
+++ b/coscPresentation.tex
@@ -382,7 +382,10 @@ This statement requires citation \cite{p1}.
 \frametitle{References}
 \footnotesize{
 \begin{thebibliography}{99} % Beamer does not support BibTeX so references must be inserted manually as below
-\bibitem[Karger Diagram]{p1} 
+\bibitem[Karger Diagram]{p1} Thore Husfeldt  (2012)
+\newblock Karger's Algorithm Diagram
+\newblock \emph{Wikipedia} 
+
 \bibitem[Smith, 2012]{p1} John Smith (2012)
 \newblock Title of the publication
 \newblock \emph{Journal Name} 12(3), 45 -- 678.
