--- a/coscPresentation.tex
+++ b/coscPresentation.tex
@@ -188,7 +188,7 @@ However, we have showed even if it can only succeed with small probability, we c
 \begin{frame}
 \frametitle{What is contraction algorithm?}
 \begin{itemize}
-	\item David Karger discoverst the contraction algorithm in 1992.
+	\item David Karger discovered the contraction algorithm in 1992.
 	\item Multigraph: An undirected graph that is allowed to have multiple edges between the same pair of nodes.
 \end{itemize}
 \end{frame}
